--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button class="equal operation">=</button>
         </div>
     </section>
+    <script src="./script.js"></script>
 </body>
 
 </html>
